# eye

./: .gitignore  README.md  pyproject.toml
eye/: __init__.py  config.py  logs.py
eye/architecture/: classifier.py  fovea.py  module.py  motor.py  names.py  peripheral.py  retina.py
eye/training/: train_eye_focus.py
